scene/workspacescene: allow an early exit in the overlay candidate search

This fixes direct scanout for situations with opaque subsurfaces that cover the
entire screen. Before, when the opaque subsurface was found, it still processed
all parent surfaces when unwinding the recursion. In some cases, that added the
parent surface to the list, breaking direct scanout for no reason.

BUG: 515784